Added todo for getting native status for all NA(N) values because its bugged rn

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,6 +12,10 @@
     </article>
     <br>
     <article class="result-container" id="gov-container">
+        <select (change)="changeGrowthHabit($event)" name="growthHabitSelector" id="growthHabitSelector">
+            <option [defaultSelected]="true" [value]="null"></option>
+            <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
+        </select>
         <section *ngFor="let plant of filteredNativePlants$ | async; let i = index;"
             class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
             <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}</h1>
