--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,18 @@
 .result-container{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
 }
 
 #filterSection{
     top: 0;
     position: sticky;
+    margin-left: .75vw;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-top:.5vw;
+}
+
+.container{
+    margin-left:1.5vw;
 }
