--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,3 @@
-.result-container{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-}
-
 #filterSection{
     top: 0;
     position: sticky;
@@ -15,4 +10,15 @@
 
 .container{
     margin-left:1.5vw;
+}
+
+.gov-container-scrollport{
+    height: inherit;
+    min-height: 60em;
+    width:100%
+}
+
+.positional-plant-result-container{
+    height: 6em;
+    /* width: fit-content; */
 }
