--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,14 +23,19 @@
 
     <article class="result-container" id="gov-container">
         <!-- TODO fix the virtual scroll -->
-        <cdk-virtual-scroll-viewport itemSize="100" id="gov-container-scrollport" class="gov-container-scrollport">
-        <section *cdkVirtualFor="let plant of filteredNativePlants$ | async; let i = index;"
-            class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
-            <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}</h1>
-            <a target="_blank" rel="noopener noreferrer" [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
-                id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
-            <h4 class="result-property" id="plant-growth-habit-{{i}}">{{plant.growthHabit}}</h4>
-        </section>
+         <!-- TODO mat-grid-list to generate a virtual grid -->
+        <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport" class="gov-container-scrollport">
+            <mat-grid-list cols="4">
+                <mat-grid-tile *cdkVirtualFor="let plant of filteredNativePlants$ | async; let i = index;"
+                    class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
+                    <section class="plant-holder" id="plant-holder-{{i}}">
+                        <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}</h1>
+                        <a target="_blank" rel="noopener noreferrer" [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
+                        id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
+                        <h4 class="result-property" id="plant-growth-habit-{{i}}">{{plant.growthHabit}}</h4>
+                    </section>
+                </mat-grid-tile>
+            </mat-grid-list>
         </cdk-virtual-scroll-viewport>
     </article>
 </body>
