fixed tile size of the card

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-:host{
+:root{
     --item-size: 8em;
 }
 
@@ -28,7 +28,6 @@
 }
 
 .plant-holder {
-    background-color: azure;
     display: flex;
     flex-direction: column;
 }
