removing useless stuff, adding composite type so i can use the common name / county data

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,23 +4,12 @@
         <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
     </select>
     <input type="checkbox" name="includeNationwidePlants" id="includeNationwidePlantsControl"
-        (change)="setNationwideFilter($event)" [checked]="true" [disabled]="filterInProgress$ | async">
+        (change)="setNationwideFilter($event)" [checked]="false" [disabled]="filterInProgress$ | async">
     <label for="includeNationwidePlantsControl" class="includeNationwidePlantsLabel"
         id="includeNationwidePlantsLabel">Include Nationwide Native Plants?</label>
 </section>
 
 <body class="container" id="container">
-    <!-- <article class="result-container" id="result-container"> -->
-    <!-- <section *ngFor="let result of lastSearch$ | async; let i = index;" class="result-item" id="result-item-{{i}}"> -->
-    <!-- <h1 class="result-scientific-name" id="result-scientific-name-{{i}}">{{result.acceptedScientificName}}</h1> -->
-    <!-- <h2 class="result-species" id="result-species-{{i}}">Species: {{result.species}}</h2> -->
-    <!-- <h3 class="result-genus" id="result-genus-{{i}}">Genus: {{result.genus}}</h3>
-            <h4 class="result-family" id="result-family-{{i}}">Family: {{result.family}}</h4> -->
-    <!-- <h5 class="result-taxonomic-status" id="result-taxonomic-status-{{i}}">{{result.taxonomicStatus}}</h5> -->
-    <!-- </section> -->
-    <!-- </article>
-    <br> -->
-
     <article class="result-container" id="gov-container">
         <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport" class="gov-container-scrollport">
             <mat-grid-list cols="4" rowHeight="1.75:1">
