--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,8 @@
         (change)="setNationwideFilter($event)" [checked]="false" [disabled]="filterInProgress$ | async">
     <label for="includeNationwidePlantsControl" class="includeNationwidePlantsLabel"
         id="includeNationwidePlantsLabel">Include Nationwide Native Plants?</label>
+
+    <h2 class="filter-title" id="title">Native Plants Near You!</h2>
 </section>
 
 <body class="container" id="container">
