got the common name displaying on the page! and i also got the county information retrieved from each one, using a map to retrieve via symbol quickly

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,7 @@
                     class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
                     <section class="plant-holder" id="plant-holder-{{i}}">
                         <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}</h1>
+                        <h2 class="result-common-name" id="plant-common-name-{{i}}">{{plant.commonName}}</h2>
                         <a target="_blank" rel="noopener noreferrer" [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
                         id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
                         <h4 class="result-property" id="plant-growth-habit-{{i}}">{{plant.growthHabit}}</h4>
