prob just a todo idk

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </select>
     <h2 class="filter-title" id="title">Native Plants Near You!</h2>
 </section>
-
+<plant-search></plant-search>
 <body class="container" id="container">
     <article class="result-container" id="gov-container">
         <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport" class="gov-container-scrollport">
