fixed filter bug including incorrect plants for the county by not checkign state fip

--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -1,1 +1,3 @@
-<p>plant-search works!</p>
+<section id="plant-search-container">
+    <input type="text" name="searchbar" id="searchbar" #searchBar (change)="search(searchBar.value)">
+</section>
