cleanup and todo creation

--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -1,5 +1,5 @@
 <section id="plant-search-container">
-    <input type="text" name="searchbar" id="searchbar" #searchBar (change)="search(searchBar.value)">
+    <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)">
     <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector" #growthHabitSelector
         [disabled]="filterInProgress$ | async">
         <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
