--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -1,8 +1,11 @@
 <section id="plant-search-container">
     <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)">
-    <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector" #growthHabitSelector
-        [disabled]="filterInProgress$ | async">
+    <select name="sortSelector" id="sortSelector" #sortSelector (change)="changeSortOption(sortSelector.value)">
+        <option *ngFor="let option of sortOptions" [value]="option">{{option}}</option>
+    </select>
+    <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector"
+        #growthHabitSelector [disabled]="filterInProgress$ | async">
         <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
     </select>
-    <h2 class="filter-title" id="title">Native Plants Near You!</h2>
+    <h2 class="filter-title" id="title">Native Plants in {{countyName}}</h2>
 </section>
