--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 :root{
-    --item-size: 8em;
+    --item-size: 5em;
 }
 
 h2{
@@ -9,12 +9,15 @@ h2{
 
 .container {
     margin-left: 1.5vw;
-    height: 100%;
+    height: calc(100vh - .5vh - 4em);
 }
 
+.result-container{
+    height: inherit;
+}
 .gov-container-scrollport {
-    height: calc(100vh - .5vh - 2em);
-    width: 100%
+    width: 100%;
+    height: 100%;
 }
 
 .plant-holder,
