--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -1,8 +1,11 @@
 <section id="plant-search-container">
-    <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)">
+    <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)" placeholder="e.g. Lupinus agardhianus, Apache plume,...,">
     <select name="sortSelector" id="sortSelector" #sortSelector (change)="changeSortOption(sortSelector.value)">
         <option *ngFor="let option of sortOptions" [value]="option">{{option}}</option>
     </select>
+    <button matIconButton class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
+        <mat-icon>sort_by_alpha</mat-icon>
+    </button>
     <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector"
         #growthHabitSelector [disabled]="filterInProgress$ | async">
         <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
