--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,33 @@
 
 <body class="container" id="container">
     <article class="result-container" id="gov-container">
-        <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport" class="gov-container-scrollport">
+        <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport"
+            class="gov-container-scrollport">
             <mat-grid-list cols="4" rowHeight="1.75:1">
                 <mat-grid-tile *cdkVirtualFor="let plant of plantData; let i = index;"
                     class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
                     <section class="plant-holder" id="plant-holder-{{i}}">
-                        <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}</h1>
+                        <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}
+                        </h1>
                         <h2 class="result-common-name" id="plant-common-name-{{i}}">{{plant.commonName}}</h2>
-                        <a target="_blank" rel="noopener noreferrer" [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
-                        id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
+                        <a target="_blank" rel="noopener noreferrer"
+                            [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
+                            id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
+                        @if (plant.shadeTolerance != null) {
+                        <mat-icon>
+                            @switch (plant.shadeTolerance) {
+                            @case ('Intermediate') {
+                            partly_cloudy_day
+                            }
+                            @case('Intolerant'){
+                            sunny
+                            }
+                            @case('Tolerant'){
+                            cloud
+                            }
+                            }
+                        </mat-icon>
+                        }
                         <h4 class="result-property" id="plant-growth-habit-{{i}}">{{plant.growthHabit}}</h4>
                     </section>
                 </mat-grid-tile>
