--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,24 +11,48 @@
                         <h1 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName}}
                         </h1>
                         <h2 class="result-common-name" id="plant-common-name-{{i}}">{{plant.commonName}}</h2>
-                        <a target="_blank" rel="noopener noreferrer"
-                            [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
-                            id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
-                        @if (plant.shadeTolerance != null) {
-                        <mat-icon>
+                        <span class="symbolAndShadeRow">
+                            <a target="_blank" rel="noopener noreferrer"
+                                [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
+                                id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
+
+                            @if (plant.shadeTolerance != null) {
                             @switch (plant.shadeTolerance) {
                             @case ('Intermediate') {
-                            partly_cloudy_day
+                            <div style="display: grid; grid: 1fr 1fr;">
+                                <mat-icon class="overlapped-icon overlapped-sun">sunny</mat-icon>
+                                <mat-icon class="overlapped-icon overlapped-cloud">cloud</mat-icon>
+                            </div>
                             }
                             @case('Intolerant'){
-                            sunny
+                            <mat-icon>
+                                sunny
+                            </mat-icon>
                             }
                             @case('Tolerant'){
-                            cloud
+                            <mat-icon style="color: grey;">
+                                cloud
+                            </mat-icon>
                             }
                             }
-                        </mat-icon>
-                        }
+                            }
+                            @if(plant.duration != null){
+                            <span style="font-size: 1.75em;">
+                                @switch ((plant.duration)) {
+                                @case ('Biennial') {
+                                &#9863;
+                                }
+                                @case('Annual'){
+                                &#8857;
+                                }
+                                @case ('Perennial') {
+                                &#9854;
+                                }
+                                }
+
+                            </span>
+                            }
+                        </span>
                         <h4 class="result-property" id="plant-growth-habit-{{i}}">{{plant.growthHabit}}</h4>
                     </section>
                 </mat-grid-tile>
