--- a/src/app/plant-search/plant-search.component.css
+++ b/src/app/plant-search/plant-search.component.css
@@ -2,13 +2,14 @@
 #plant-search-container {
     top: 0;
     position: sticky;
-    margin-left: .75vw;
+    padding-left: .75vw;
     display: flex;
     align-items: center;
     text-align: center;
     padding-top: .5vh;
     height: 4em;
-    width: 70%;
+    width: calc(100% - .75vw);
+    background-color: var(--wood-brown);
 }
 
 .filter-title{
