--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+    --wood-brown: rgb(131, 100, 60);
+}
 body{
     margin: 0;
 }
