--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -1,14 +1,19 @@
 <section id="plant-search-container">
-    <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)" placeholder="e.g. Lupinus agardhianus, Apache plume,...,">
+    <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)"
+        placeholder="e.g. Lupinus agardhianus, Apache plume,...,">
     <select name="sortSelector" id="sortSelector" #sortSelector (change)="changeSortOption(sortSelector.value)">
-        <option *ngFor="let option of sortOptions" [value]="option">{{option}}</option>
+        @for (option of sortOptions; track $index) {
+        <option [value]="option">{{option}}</option>
+        }
     </select>
     <button matIconButton class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
         <mat-icon>sort_by_alpha</mat-icon>
     </button>
     <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector"
         #growthHabitSelector [disabled]="filterInProgress$ | async">
-        <option *ngFor="let growthHabit of growthHabits" [value]="growthHabit">{{growthHabit}}</option>
+        @for (growthHabit of growthHabits; track $index) {
+        <option [value]="growthHabit">{{growthHabit}}</option>
+        }
     </select>
     <h2 class="filter-title" id="title">Native Plants in {{countyName}}</h2>
 </section>
