--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
     --wood-brown: rgb(131, 100, 60);
+    --wood-dark-brown: rgb(68, 51, 29);
 }
 body{
     margin: 0;
