--- a/src/app/plant-search/plant-search.component.html
+++ b/src/app/plant-search/plant-search.component.html
@@ -3,7 +3,7 @@
         placeholder="e.g. Lupinus agardhianus, Apache plume,...,">
     <select name="sortSelector" id="sortSelector" #sortSelector (change)="changeSortOption(sortSelector.value)">
         @for (option of sortOptions; track $index) {
-        <option [value]="option">{{option}}</option>
+        <option [value]="option">{{ 'SORT_OPTIONS.' + option | uppercase | transloco}}</option>
         }
     </select>
     <button matIconButton class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
@@ -12,8 +12,8 @@
     <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" id="growthHabitSelector"
         #growthHabitSelector [disabled]="filterInProgress$ | async">
         @for (growthHabit of growthHabits; track $index) {
-        <option [value]="growthHabit">{{growthHabit}}</option>
+        <option [value]="growthHabit">{{'GROWTH_HABIT_FILTER_OPTIONS.' + growthHabit| uppercase | transloco}}</option>
         }
     </select>
-    <h2 class="filter-title" id="title">Native Plants in {{countyName}}</h2>
+    <h2 class="filter-title" id="title">{{'NATIVE_PLANTS_IN' | transloco}} {{countyName}}</h2>
 </section>
