--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,9 @@
 
 <body class="container" id="container">
     <article class="result-container" id="gov-container">
-        <cdk-virtual-scroll-viewport itemSize="var(--item-size)" id="gov-container-scrollport"
+        <cdk-virtual-scroll-viewport [itemSize]="itemSize" id="gov-container-scrollport"
             class="gov-container-scrollport">
-            <mat-grid-list cols="5" rowHeight="1.75:1">
+            <mat-grid-list [cols]="columns" rowHeight="1.75:1">
                 <mat-grid-tile *cdkVirtualFor="let plant of plantData; let i = index;"
                     class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
                     <section class="plant-holder" id="plant-holder-{{i}}">
@@ -53,10 +53,23 @@
                             </span>
                             }
                         </span>
+                        @if(plant.growthHabit.length > 0)
+                        {
+
                         <h4 class="result-property" id="plant-growth-habit-{{i}}">
                             @for (growthHabit of plant.growthHabit; track $index) {
                             {{'GROWTH_HABITS.' + growthHabit | uppercase | transloco}}{{ $index + 1 <
                                 plant.growthHabit.length ? ',' : '' }} } </h4>
+
+                                }
+
+                                @if(plant.activeGrowthPeriod.length > 0){
+
+                                <h4 class="result-property" id="active-season-{{i}}">
+                                    @for (season of plant.activeGrowthPeriod; track $index) {
+                                    {{season}}{{ $index + 1 < plant.activeGrowthPeriod.length ? ',' : '' }} } </h4>
+                                        }
+
                     </section>
                 </mat-grid-tile>
             </mat-grid-list>
