--- a/src/app/plant-search/plant-search.component.css
+++ b/src/app/plant-search/plant-search.component.css
@@ -15,5 +15,9 @@
 .filter-title{
     flex: 2;
     font-weight: 600;
-    font-size: 1.4em;
+    font-size: clamp(1.75vw, 1.75em ,4em);
+}
+
+.searchbar{
+    width: 100%;
 }
