--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 :root{
     --wood-brown: rgb(131, 100, 60);
     --wood-dark-brown: rgb(68, 51, 29);
+    --grass-light-green: rgb(162, 192, 162);;
 }
 body{
     margin: 0;
