removing todos, making function private static cuz idk

--- a/src/app/plant-search/plant-search.component.css
+++ b/src/app/plant-search/plant-search.component.css
@@ -47,7 +47,7 @@
 
 .sortOrderButton{
     background-color: var(--grass-light-green);
-    border-radius: 0;
+    color: var(--wood-dark-brown)
 }
 
 .selector{
