--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,66 +7,7 @@
             <mat-grid-list [cols]="columns" rowHeight="1.75:1">
                 <mat-grid-tile *cdkVirtualFor="let plant of plantData; let i = index;"
                     class="positional-plant-result-container" id="positional-plant-result-container-{{i}}">
-                    <section class="plant-holder" id="plant-holder-{{i}}">
-                        <h1 class="result-common-name" id="plant-common-name-{{i}}" >{{plant.commonName | titlecase}} 
-                        </h1>
-                        <h2 class="result-scientific-name" id="plant-scientific-name-{{i}}">{{plant.scientificName |
-                            titlecase}}
-                        </h2>
-                        <span class="symbolAndShadeRow">
-                            <a target="_blank" rel="noopener noreferrer"
-                                [href]="usdaGovPlantProfileUrl + plant.acceptedSymbol" class=""
-                                id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
-
-                            @if (plant.shadeTolerance != null) {
-                            @switch (plant.shadeTolerance) {
-                            @case ('Intermediate') {
-                            <shady-icon></shady-icon>
-                            }
-                            @case('Intolerant'){
-                            <mat-icon class="sun">
-                                sunny
-                            </mat-icon>
-                            }
-                            @case('Tolerant'){
-                            <mat-icon class="cloud">
-                                cloud
-                            </mat-icon>
-                            }
-                            }
-                            }
-                            @if(plant.duration != null){
-                            <span style="font-size: 1.75em; place-items: center;">
-                                @if (plant.duration.includes('Biennial' )) {
-                                &#9863;
-                                }
-                                @if(plant.duration.includes('Annual') || plant.duration.includes('AN')){
-                                &#8857;
-                                }
-                                @if (plant.duration.includes('Perennial')) {
-                                &#9854;
-                                }
-
-                            </span>
-                            }
-                        </span>
-                        @if(plant.growthHabit.length > 0)
-                        {
-
-                        <h4 class="result-property" id="plant-growth-habit-{{i}}">
-                            @for (growthHabit of plant.growthHabit; track $index) {
-                            {{'GROWTH_HABITS.' + growthHabit | uppercase | transloco}}{{ $index + 1 <
-                                plant.growthHabit.length ? ',' : '' }} } </h4>
-                                }
-
-                                @if(plant.activeGrowthPeriod.length > 0){
-
-                                <h4 class="result-property" id="active-season-{{i}}">
-                                    @for (season of plant.activeGrowthPeriod; track $index) {
-                                    {{season}}{{ $index + 1 < plant.activeGrowthPeriod.length ? ',' : '' }} } </h4>
-                                        }
-
-                    </section>
+                    <plant-tile [plant]="plant"></plant-tile>
                 </mat-grid-tile>
             </mat-grid-list>
         </cdk-virtual-scroll-viewport>
