got the canvas to render within a 975 x 610 viewport !!

--- a/src/app/county-map/county-map.component.html
+++ b/src/app/county-map/county-map.component.html
@@ -1,2 +1,3 @@
-<p>county-map works!</p>
-<canvas #mapCanvas></canvas>
+<article id="map-container" style="height: 100%;">
+    <canvas #mapCanvas height="610" width="975" style="max-width: 100%;"></canvas>
+</article>
