--- a/src/app/county-map/county-map.component.html
+++ b/src/app/county-map/county-map.component.html
@@ -1,3 +1,3 @@
-<article id="map-container" style="height: 100%;">
+<article id="map-container" style="height: 100%;display: flex;justify-content: center; align-items: center; background-color: var(--grass-light-green);">
     <canvas #mapCanvas height="610" width="975" style="max-width: 100%;"></canvas>
 </article>
