Added a stylized icon for image search, made it clickable and open a google image search of the item's common name / scientific name

--- a/src/app/plant-tile/plant-tile.component.css
+++ b/src/app/plant-tile/plant-tile.component.css
@@ -2,6 +2,12 @@
     --item-size: 5em;
 }
 
+.result-common-name{
+    display: flex;
+    place-items: center;
+    gap: .5em;
+}
+
 h2 {
     all: unset;
 }
