--- a/src/app/plant-tile/plant-tile.component.css
+++ b/src/app/plant-tile/plant-tile.component.css
@@ -6,9 +6,11 @@
     display: flex;
     place-items: center;
     gap: .5em;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
-h2 {
+h1, h2, h3, h4 {
     all: unset;
 }
 
