restyling the plant tile to take up the entire space, fit more per tile / organize items different

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,9 +31,15 @@
     height: 100%;
 }
 
-.plant-holder,
+/* .plant-holder, */
 .positional-plant-result-container {
     height: var(--item-size);
+}
+
+.plant-holder{
+  width: 100%;
+  height: 100%;
+  padding: 1.5em 1em;
 }
 
 .positional-plant-result-container{
