--- a/src/app/pic-search-icon/pic-search-icon.component.css
+++ b/src/app/pic-search-icon/pic-search-icon.component.css
@@ -3,11 +3,15 @@
 }
 
 .search{
-    /* color:var(--wood-dark-brown); */
-    color:black;
+    color:var(--wood-dark-brown);
     transform: translate(12px, 4px) scale( .75,.75);
 }
 
 .photo{
     color:var(--wood-brown);
+}
+
+.info-btn{
+    justify-self: flex-end;
+    align-self: flex-end;
 }
