--- a/src/app/pic-search-icon/pic-search-icon.component.css
+++ b/src/app/pic-search-icon/pic-search-icon.component.css
@@ -1,3 +1,8 @@
+button{
+    box-shadow: unset;
+    border:unset;
+}
+
 .icon{
     grid-area: 1/1/2/2;
 }
@@ -9,9 +14,4 @@
 
 .photo{
     color:var(--wood-brown);
-}
-
-.info-btn{
-    justify-self: flex-end;
-    align-self: flex-end;
 }
