--- a/src/app/plant-tile/plant-tile.component.css
+++ b/src/app/plant-tile/plant-tile.component.css
@@ -2,12 +2,12 @@
     --item-size: 5em;
 }
 
-.plant-holder{
-    height: inherit;
-    width: inherit;
+.plant-holder {
+    height: 100%;
+    width: 100%;
 }
 
-.result-common-name{
+.result-common-name {
     display: flex;
     place-items: center;
     gap: .5em;
@@ -15,7 +15,10 @@
     font-weight: bold;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     all: unset;
 }
 
@@ -54,4 +57,27 @@ h1, h2, h3, h4 {
 .overlapped-cloud,
 .cloud {
     color: grey;
+}
+
+.info-btn {
+    background-color: transparent;
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid var(--wood-dark-brown);
+}
+
+.info-icon{
+    color: var(--wood-dark-brown);
+}
+
+.last-row{
+    display:inline-flex;
+    justify-content: space-between;
+    margin-top: auto;
+    align-content: center;
 }
