--- a/src/app/plant-tile/plant-tile.component.html
+++ b/src/app/plant-tile/plant-tile.component.html
@@ -1,7 +1,5 @@
 <section class="plant-holder" id="plant-holder-{{plant.acceptedSymbol}}">
-    <h1 class="result-common-name" id="plant-common-name-{{plant.acceptedSymbol}}">{{plant.commonName | titlecase}}
-        <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" (click)="openImageSearch(plant)"></pic-search-icon>
-    </h1>
+    <h1 class="result-common-name" id="plant-common-name-{{plant.acceptedSymbol}}">{{plant.commonName | titlecase}}</h1>
     <h2 class="result-scientific-name" id="plant-scientific-name-{{plant.acceptedSymbol}}">{{plant.scientificName |
         titlecase}}
     </h2>
@@ -47,7 +45,10 @@
                     }
 
 
-                    <button matMiniFab class="info-btn" id="info-btn-{{plant.acceptedSymbol}}">
-                        <mat-icon>question_mark</mat-icon>
-                    </button>
+                    <div class="last-row" id="last-row-{{plant.acceptedSymbol}}">
+                        <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" (click)="openImageSearch(plant)"></pic-search-icon>
+                        <button class="info-btn" id="info-btn-{{plant.acceptedSymbol}}" (click)="openInfoPage(plant)">
+                            <mat-icon class="info-icon">question_mark</mat-icon>
+                        </button>
+                    </div>
 </section>
